# Monitoring

./: .gitignore  CMakeLists.txt  iot_storage_dryrun_events.diff  readme.md
app/: CMakeLists.txt  main.cpp
app/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
app/qml/: Main.qml
app/qml/components/: DeviceControlStatusBox.qml  DeviceStatusBox - 복사본.qml  GraphDisplaySettingsDialog.qml
app/qml/pages/: DevPanel.qml  HistoryQueryDialog.qml  IoTPanel.qml  MainPanel.qml  RobotPanel.qml  ThresholdSettingDialog.qml  VisionPanel.qml
app/resources/: app.qrc
app/src/iot/storage/: IotDatabase.cpp  IotHistoryRepository.cpp  IotHistoryRepository.h  IotSchema.cpp  IotSchema.h  IotThresholdRepository.cpp  IotThresholdRepository.h
app/src/iot/viewmodel/: IotViewModel.cpp  IotViewModel.h
app/src/runtime/: DryRunRemoteTransportClient.cpp  DryRunRemoteTransportClient.h  IRemoteTransportClient.h  IRobotGateway.h  MultiChannelRobotGateway.cpp  MultiChannelRobotGateway.h  RemoteCommandBuilder.cpp  RemoteCommandBuilder.h  RemoteCommandResponseParser.cpp  RemoteCommandResponseParser.h  RemoteMessageTypes.h  RemoteSnapshotParser.cpp  RemoteSnapshotParser.h  RobotRuntimeTypes.h  ZeroMqRemoteTransportClient.cpp  ZeroMqRemoteTransportClient.h
core/: CMakeLists.txt
core/include/monitoring/: FairinoMonitorService.h  RobotSnapshot.h
core/src/: FairinoMonitorService.cpp  RobotSnapshot.cpp
docs/: iot_remote_command_schema.md  iot_remote_snapshot_schema.md  iot_remote_transport_config.md
iot_storage_dryrun_events_split/: iot_storage_dryrun_events_part_01_lines_0001-0250.txt  iot_storage_dryrun_events_part_02_lines_0251-0500.txt  iot_storage_dryrun_events_part_03_lines_0501-0610.txt
tests/: CMakeLists.txt  fairino_zmq_command_server.cpp  fairino_zmq_robot_agent.cpp  fairino_zmq_snapshot_publisher.cpp  iot_storage_collector.cpp  manual_jog_test.cpp  manual_monitor_test.cpp  zmq_command_dryrun_server.cpp  zmq_snapshot_dryrun_publisher.cpp
