cmake_minimum_required(VERSION 3.16)

# Qt м°ҫкё° (Widgets н•„мҲҳ)
find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Quick Qml QuickControls2 Charts Sql Network)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Quick Qml QuickControls2 Charts Sql Network)

# Qt мһҗлҸҷ мІҳлҰ¬ (ui/moc/rcc)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

# мҶҢмҠӨ лӘ©лЎқ
set(APP_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 #   ${CMAKE_CURRENT_SOURCE_DIR}/gui/mainwindow.h
 #   ${CMAKE_CURRENT_SOURCE_DIR}/gui/mainwindow.cpp
 )

set(RUNTIME_SOURCES
    # лЎңлҙҮ кІҢмқҙнҠёмӣЁмқҙ кҙҖл Ё
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/IRobotGateway.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RobotRuntimeTypes.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/MultiChannelRobotGateway.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/MultiChannelRobotGateway.cpp
    # мӣҗкІ© нҶөмӢ  мқён„°нҺҳмқҙмҠӨ
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/IRemoteTransportClient.h
    # DryRunRemoteTransportClientлҠ” мӢӨм ң л„ӨнҠёмӣҢнҒ¬ нҶөмӢ  м—Ҷмқҙ лЎңлҙҮ мғҒнғңлҘј мӢңл®¬л Ҳмқҙм…ҳн•ҳлҠ” н…ҢмҠӨнҠёмҡ© кө¬нҳ„мІҙ
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/DryRunRemoteTransportClient.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/DryRunRemoteTransportClient.cpp
    # л©”мӢңм§Җ нғҖмһ…
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RemoteMessageTypes.h
    # лЎңлҙҮ мғҒнғң мҠӨлғ…мғ· нҢҢмӢұ
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RemoteSnapshotParser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RemoteSnapshotParser.cpp
    # мӣҗкІ© лӘ…л № мғқм„ұ л°Ҹ мқ‘лӢө нҢҢмӢұ
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RemoteCommandBuilder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RemoteCommandBuilder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RemoteCommandResponseParser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime/RemoteCommandResponseParser.cpp
)

set(IOT_SOURCES
    # iot кҙҖл Ё
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/viewmodel/IotViewModel.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/viewmodel/IotViewModel.cpp
    #
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotDatabase.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotDatabase.cpp
    #
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotSchema.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotSchema.cpp
    #IotThresholdRepository
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotThresholdRepository.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotThresholdRepository.cpp
    #IotHistoryRepository
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotHistoryRepository.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/iot/storage/IotHistoryRepository.cpp
)

list(APPEND APP_SOURCES ${RUNTIME_SOURCES} ${IOT_SOURCES})
# UI нҢҢмқј(м„ нғқ)
#if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/gui/mainwindow.ui")
#    list(APPEND APP_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/gui/mainwindow.ui")
#endif()

# лҰ¬мҶҢмҠӨ qrc(м„ нғқ)
if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/resources/app.qrc")
    list(APPEND APP_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/resources/app.qrc")
endif()

# мӢӨн–үнҢҢмқј мғқм„ұ (Qt6лҠ” qt_add_executable к¶ҢмһҘ)
if (QT_VERSION_MAJOR GREATER_EQUAL 6)
    qt_add_executable(MonitoringApp
        MANUAL_FINALIZATION
        ${APP_SOURCES}
    )
else()
    add_executable(MonitoringApp
        ${APP_SOURCES}
#        resources/app.qrc
#        qml/RobotPanelPage.qml
    )
endif()

# include кІҪлЎң (guiм—җм„ң include нҺён•ҳкІҢ)
target_include_directories(MonitoringApp PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/gui
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runtime
    #${FAIRINO_INCLUDE_DIR} # мқјмӢңм ҒмңјлЎң coreм—җм„ң н•„мҡ”н•ң кІҪлЎңлҸ„ м¶”к°Җ (coreмқҙмҷём—җ appм—җм„ңлҸ„ м§Ғм ‘ includeн•  кІҪмҡ° лҢҖл№„
)

# Qt + core л§ҒнҒ¬
target_link_libraries(MonitoringApp PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Quick
    Qt${QT_VERSION_MAJOR}::Qml
    Qt${QT_VERSION_MAJOR}::QuickControls2
    Qt${QT_VERSION_MAJOR}::Charts
    Qt${QT_VERSION_MAJOR}::Sql
    Qt${QT_VERSION_MAJOR}::Network
    monitoring_core
)

# ----------------------------
# Optimize (MSVC) - мөңмў… л§ҒнҒ¬ лӢЁкі„м—җм„ң нҡЁкіј нҒј
# ----------------------------
if (MSVC)
    # Release кі„м—ҙ: л§ҒнҒ¬ мөңм Ғнҷ” + LTCG
    target_link_options(MonitoringApp PRIVATE
        $<$<CONFIG:Release>:/LTCG /OPT:REF /OPT:ICF>
        $<$<CONFIG:RelWithDebInfo>:/LTCG /OPT:REF /OPT:ICF>
        $<$<CONFIG:MinSizeRel>:/LTCG /OPT:REF /OPT:ICF>
    )
endif()

# Qt6 л§Ҳл¬ҙлҰ¬
if (QT_VERSION_MAJOR GREATER_EQUAL 6)
    qt_finalize_executable(MonitoringApp)
endif()

# ----------------------------
# Runtime DLL copy (Fairino)
# ----------------------------
if (WIN32)
    add_custom_command(TARGET MonitoringApp POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
        "${FAIRINO_LIB_DIR}/fairino.dll"
        $<TARGET_FILE_DIR:MonitoringApp>
    )
endif()
